ATK getActionNameCB returning localised action instead of unlocalised
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox97 | --- | unaffected |
| firefox98 | + | fixed |
| firefox99 | --- | fixed |
People
(Reporter: Jamie, Assigned: eeejay)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Reported on Matrix. After bug 1748749, getActionNameCB now calls ActionDescriptionAt instead of ActionNameAt. This results in the localised action being returned instead of the unlocalised action, which breaks stuff related to clickables in Orca for non-English users.
Updated•3 years ago
|
Comment 1•3 years ago
|
||
Set release status flags based on info from the regressing bug 1748749
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Eitan, your patch created this regression, how feasible would it be to have a fix for our last beta or for RC on Monday? Thanks
| Assignee | ||
Comment 3•3 years ago
|
||
Updated•3 years ago
|
Comment 5•3 years ago
|
||
| bugherder | ||
Comment 6•3 years ago
|
||
Please request uplift now if you want this fix in 98, thanks.
| Reporter | ||
Comment 7•3 years ago
|
||
Comment on attachment 9265193 [details]
Bug 1756755 - Return unlocalized action name for atk_action_get_name. r?morgan
Beta/Release Uplift Approval Request
- User impact if declined: Orca screen reader users won't be able to navigate to "clickable" elements.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Straightforward patch which is isolated to a very specific area.
- String changes made/needed:
| Reporter | ||
Updated•3 years ago
|
| Reporter | ||
Comment 8•3 years ago
|
||
I normally wouldn't hijack an uplift request, but I wanted to get this in ASAP.
Comment 9•3 years ago
|
||
Comment on attachment 9265193 [details]
Bug 1756755 - Return unlocalized action name for atk_action_get_name. r?morgan
Approved for landing on the beta branch before the beta->release merge. We are out of beta so this will land directly in our release candidate build shipping on Monday
Comment 10•3 years ago
|
||
| bugherder uplift | ||
Comment 11•3 years ago
|
||
Thank you! It's working as expected when testing with Firefox 99.0a1 2022-02-25
Description
•