Bug 1756755 - Return unlocalized action name for atk_action_get_name. r=morgan a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D139501